syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message AbilityGadgetInfo {
	uint32 camp_id = 1;
	uint32 camp_target_type = 2;
	uint32 target_entity_id = 3;
}
