syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum ProtEntityType {
	PROT_ENTITY_NONE = 0;
	PROT_ENTITY_AVATAR = 1;
	PROT_ENTITY_MONSTER = 2;
	PROT_ENTITY_NPC = 3;
	PROT_ENTITY_GADGET = 4;
	PROT_ENTITY_REGION = 5;
	PROT_ENTITY_WEAPON = 6;
	PROT_ENTITY_WEATHER = 7;
	PROT_ENTITY_SCENE = 8;
	PROT_ENTITY_TEAM = 9;
	PROT_ENTITY_MASSIVE_ENTITY = 10;
	PROT_ENTITY_MP_LEVEL = 11;
	PROT_ENTITY_PLAY_TEAM_ENTITY = 12;
	PROT_ENTITY_EYE_POINT = 13;
	PROT_ENTITY_MAX = 14;
}
